--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
         <img class="page-header__logo-image" src="img/logo.png" alt="Логотип" width="187" height="55">
       </a>
       <div class="page-header__title-wrapper">
-        <h2 class="page-header__title">Производство и монтаж всех видов жалюзи, рулонных штор в Новосибирску (Солнцезащитные системы)</h2>
+        <h2 class="page-header__title">Производство и монтаж всех видов жалюзи, рулонных штор в Новосибирске (Солнцезащитные системы)</h2>
         <ul class="page-header__title-list">
           <li class="page-header__title-item page-header__title-item--1">за 24 часа</li>
           <li class="page-header__title-item page-header__title-item--2">с гарантией от 15 лет</li>
