Добавил состояния кнопкам

--- a/src/index.html
+++ b/src/index.html
@@ -87,7 +87,7 @@
 
         <section class="gallery">
           <div class="gallery__wrapper">
-            <div class="galler__title-wrapper">
+            <div class="gallery__title-wrapper">
               <h2 class="gallery__title">Примеры наших работ <span>за декабрь 2019</span></h2>
               <div class="gallery__button-wrapper">
                 <button class="gallery__button gallery__button--active">Жалюзи</button>
